k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/v1/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service-external
                port:
                  number: 80
          - path: /config(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: config-service
                port:
                  number: 8888
